[project]
name = "fastapi-blog"
version = "0.1.0"
description = "A simple blog application built with FastAPI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["fastapi[standard]", "sqlalchemy"]

[dependency-groups]
dev = ["faker>=40.5.1"]

[project.scripts]
fastapi_blog = "fastapi_blog.cli:main"
